force-app/main/default/objects/phsCourses__c/phsCourses__c.object-meta.xml
<CustomObject>
    <description>This object will hold all courses for learning management system.</description>
    <label>phsCourses</label>
    <nameField>
        <label>phsCourses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCourses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>