force-app/main/default/objects/phsCourses__c/fields/testImage__c.field-meta.xml
<CustomField>
    <fullName>testImage__c</fullName>
    <label>testImage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>